tests/scan/fixtures/validation/negative/clean_rubygems_clean_mailer_gem/clean_mailer_gem.gemspec
Gem::Specification.new do |s|
  s.name = "clean_mailer_gem"
  s.version = "0.1.0"
  s.summary = "A clean Ruby gem: clean_mailer_gem"
  s.authors = ["Example Author"]
end
